refactored grid but it is currently buggy on mobile.

--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -44,7 +44,3 @@ body {
 		max-width: 1100px; 
 	}
 }
-
-.grid{
-	float: left;
-}
